<resources>
    <string name="app_name">LetsPong</string>
    <string name="sign_out">Sign Out</string>
    <string name="new_game">New Game</string>
    <string name="record">Record</string>
    <string name="friends">Friends</string>
    <string name="title_activity_new_game">NewGame</string>
    <string name="one_game">One game</string>
    <string name="best_of_3">Best of 3</string>
    <string name="best_of_5">Best of 5</string>
    <string name="best_of_7">Best of 7</string>
    <string name="addFriends">Add Friend</string>
    <string name="StartGame">Start Game</string>
    <string name="selectFriends">Select Friend</string>
    <string name="PleaseSelectOpponent">Please select an Opponent</string>
    <string name="OpponentName">OpponentName</string>
    <string name="OpponentUID">OpponentUID</string>
    <string name="YouHaveNoPoints">You have no points!</string>
    <string name="join_game">Join Game</string>

    <string-array name="friends_list">
        <item> Temp place holder </item>
    </string-array>
</resources>
