<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_green_light"
    tools:context="dsykes.letspong.MainPage">

    <Button
        android:id="@+id/SignOutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/Record"
        android:layout_below="@+id/Record"
        android:layout_marginTop="43dp"
        android:text="@string/sign_out"
        tools:layout_editor_absoluteX="136dp"
        tools:layout_editor_absoluteY="48dp" />

    <Button
        android:id="@+id/newGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Record"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="28dp"
        android:onClick="goToNewGameActivity"
        android:text="@string/new_game" />

    <Button
        android:id="@+id/Record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:onClick="goToRecordActivity"
        android:text="@string/record" />
    <Button
        android:id="@+id/Friends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:onClick="goToFriendsActivity"
        android:text="@string/friends" />
</RelativeLayout>
